--- a/Linkify/ios/Runner/GoogleService-Info.plist
+++ b/Linkify/ios/Runner/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyD-2xfYJTTx9FX324_AVGvAP88v2TMv5N0</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>560723909414</string>
 	<key>PLIST_VERSION</key>
